# Royal-Tournament-of-Ur

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  dev_display.py  pyproject.toml  rust_translate.py  setup.py  test_translate.py  tournament.py  translate.py
.github/workflows/: pytest.yaml
royal_game/: __init__.py  _constants.py  _exceptions.py
royal_game/modules/: board.py  game.py  grid.py  grid_status.py  move.py  player.py
royal_game/players/: casper.py  dummy.py  example.py  greedy.py  human.py  rng.py
royal_game/tests/: test_board.py  test_game.py  test_grid.py  test_move.py  test_player.py
